- do not require to be on master for releasing - add jacoco to generate test coverage